--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@nguniversal/express-engine": "^15.1.0",
-    "aws-serverless-express": "^3.4.0",
+    "@vendia/serverless-express": "^4.10.1",
     "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
